PPRESS-48 Fix tab placement on small screens

--- a/src/common/css/pressshack-admin.css
+++ b/src/common/css/pressshack-admin.css
@@ -66,7 +66,7 @@
 }
 
 .pressshack-admin-wrapper .nav-tab-wrapper .nav-tab-active {
-    border-top: 2px solid #655997;
+    border-top: 1px solid #655997;
     color: #655997;
 }
 
